@@ -10,6 +10,7 @@ v1.5.0 (WIP)
 - Provide DropDownOption in DropDown handlers
 - Provide ListItem in List handlers
 - Panic when attempting to add an invalid FormItem
+- Release lock on InputField while executing DoneFunc and FinishedFunc
 
 v1.4.9 (2020-09-08)
 - Add InputField.GetCursorPosition and InputField.SetCursorPosition
